--- a/packages/events.yaml
+++ b/packages/events.yaml
@@ -1,3 +1,10 @@
+---
+template:
+  - binary_sensor:
+      - name: Last Day of the Month
+        icon: mdi:calendar
+        state: "{{ (now() + timedelta(days=1)).day == 1 }}"
+
 # sensor:
 #   - platform: rest
 #     resource: https://raw.githubusercontent.com/thejeffreystone/home-assistant-configuration/master/config/packages/json_data/school.json
