--- a/packages/energy/goodwe_mode.yaml
+++ b/packages/energy/goodwe_mode.yaml
@@ -45,20 +45,47 @@ automation:
   - alias: Inverter set backup mode
     description: Inverter set backup mode at 6pm if battery didn't charge to 100%
     mode: single
+    # trigger:
+    #   - platform: time
+    #     at: '18:00:00'
+    # condition:
+    #   - condition: numeric_state
+    #     entity_id: sensor.goodwe_battery_soc_daily_max
+    #     below: 100
+    #   - condition: state
+    #     entity_id: sensor.goodwe_inverter_operation_mode
+    #     state: 'General mode'
+    #   # if current SoC above 89% - else we really top up too much from grid
+    #   - condition: numeric_state
+    #     entity_id: sensor.goodwe_battery_soc
+    #     above: '84'
+    #   # Only if in online/grid mode, else backup might loser power
+    #   - condition: state
+    #     entity_id: sensor.goodwe_work_mode_label
+    #     state: 'Normal (On-Grid)'
+    #   # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
+    #   - condition: numeric_state
+    #     entity_id: sensor.solcast_forecast_energy_tomorrow
+    #     above: '20'
     trigger:
-      - platform: time
-        at: '18:00:00'
+      - platform: state
+        entity_id: sensor.goodwe_battery_mode_label
+        to: 'Standby'
+      - platform: state
+        entity_id: sensor.goodwe_battery_mode_label
+        to: 'Discharging'
     condition:
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soc_daily_max
-        below: 100
+        above: 88
       - condition: state
         entity_id: sensor.goodwe_inverter_operation_mode
         state: 'General mode'
-      # if current SoC above 89% - else we really top up too much from grid
-      - condition: numeric_state
+      - condition: state
         entity_id: sensor.goodwe_battery_soc
-        above: '84'
+        state: '89'
+        for:
+          minutes: 55
       # Only if in online/grid mode, else backup might loser power
       - condition: state
         entity_id: sensor.goodwe_work_mode_label
@@ -66,7 +93,9 @@ automation:
       # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
       - condition: numeric_state
         entity_id: sensor.solcast_forecast_energy_tomorrow
-        above: '20'
+        above: '18'
+      - condition: template
+        value_template: "{{ ('15:00' < states('sensor.time') < '19:00') }}"
     action:
       - service: select.select_option
         target:
