--- a/automations.yaml
+++ b/automations.yaml
@@ -9,3 +9,8 @@
       check_entity: binary_sensor.workday_sensor
       start_brightness: 30
       end_brightness: 90
+      pre_sunrise_actions:
+      - service: switch.turn_off
+        data: {}
+        target:
+          entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
