--- a/automations.yaml
+++ b/automations.yaml
@@ -14,3 +14,7 @@
         data: {}
         target:
           entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
+      - service: timer.start
+        data: {}
+        target:
+          entity_id: timer.morning_wakup_window
