--- a/packages/lights/light_motion_mainbedroom.yaml
+++ b/packages/lights/light_motion_mainbedroom.yaml
@@ -106,14 +106,10 @@ automation:
                   - condition: state
                     entity_id: alarm_control_panel.home_alarm
                     state: 'armed_home'
+                  - condition: state
+                    entity_id: timer.morning_wakup_window
+                    state: 'idle'
             sequence:
-              # - alias: "Log action taken"
-              #   service: script.log
-              #   data:
-              #     icon: ':zap:'
-              #     object: 'Adaptive lights'
-              #     message: >
-              #       Setting main bedroom sleep mode on
               - service: switch.turn_on
                 data:
                   entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
@@ -125,13 +121,6 @@ automation:
                 entity_id: alarm_control_panel.home_alarm
                 state: 'disarmed'
             sequence:
-              # - alias: "Log action taken"
-                # service: script.log
-                # data:
-                  # icon: ':zap:'
-                  # object: 'Adaptive lights'
-                  # message: >
-                    # Setting main bedroom sleep mode off
               - service: switch.turn_off
                 data:
                   entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
