--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "mass",
   "name": "Music Assistant",
-  "version": "2022.6.4",
+  "version": "2022.7.0b1",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.4.5"
+    "music-assistant==1.6.0"
   ],
   "codeowners": [
     "@marcelveldt"
