--- a/automations.yaml
+++ b/automations.yaml
@@ -1,4 +1,3 @@
----
 - id: '1654001290028'
   alias: Wake-up light alarm main-bedroom
   description: ''
@@ -11,11 +10,12 @@
       start_brightness: 30
       end_brightness: 90
       pre_sunrise_actions:
-        - service: switch.turn_off
-          data: {}
-          target:
-            entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
-        - service: timer.start
-          data: {}
-          target:
-            entity_id: timer.morning_wakup_window
+      - service: switch.turn_off
+        data: {}
+        target:
+          entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
+      - service: timer.start
+        data: {}
+        target:
+          entity_id:
+          - timer.morning_routine
