--- a/packages/lights/light_motion_mainbedroom.yaml
+++ b/packages/lights/light_motion_mainbedroom.yaml
@@ -1,3 +1,4 @@
+---
 timer:
   # When calling the start service on a timer that is already running, it resets
   # the duration it will need to finish and restart the timer without triggering
@@ -69,8 +70,9 @@ automation:
           #   {%- else -%}
           #   {{ ns.level }}
           #   {%- endif -%}
-      - condition: template
-        value_template: "{{ ('07:00' < states('sensor.time') or states('sensor.time') < '05:25') }}"
+      - condition: state
+        entity_id: timer.morning_routine
+        state: 'idle'
       - service: timer.start
         data:
           entity_id: timer.mainbedroomlight
@@ -106,9 +108,9 @@ automation:
                   - condition: state
                     entity_id: alarm_control_panel.home_alarm
                     state: 'armed_home'
-                  - condition: state
-                    entity_id: timer.morning_wakup_window
-                    state: 'idle'
+              - condition: state
+                entity_id: timer.morning_routine
+                state: 'idle'
             sequence:
               - service: switch.turn_on
                 data:
