--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -44,6 +44,7 @@ script:
             {% set today_name = sensor_names[now().weekday()] %}
             {% if today_name == 'sunday_disable' %}{{ 300 | int * 60 }}
             {% elif '17:00' <= states('sensor.time') <= '18:00' %}{{ 180 | int * 60 }}
+            {% elif '00:00' <= states('sensor.time') <= '6:00' %}{{ 59 | int * 60 }}
             {% else %}{{ 180 | int * 60 }}{% endif -%}
       # If device is unavailable, need a retry loop here
       - alias: "Repeat the sequence UNTIL the conditions are true"
@@ -70,17 +71,26 @@ script:
       - service: switch.turn_on
         data:
           entity_id: switch.main_bathroom_geyser
+      - choose:
+          # if before 6am in the morning then also set goodwe dod to 1% if forecast less than 30kWh
+          - conditions:
+              - condition: or
+                conditions:
+                  - condition: template
+                    value_template: >-
+                      {{ ((states('sensor.time') <= '06:00') and (states('sensor.solcast_forecast')|float < 25)) }}
+                  - condition: template
+                    value_template: >-
+                      {{ ((states('sensor.time') >= '16:00') and (states('sensor.solcast_forecast')|float < 25)) }}
+            sequence:
+              - alias: "Set DoD on inverter"
+                service: number.set_value
+                data:
+                  value: 1
+                target:
+                  entity_id: number.depth_of_discharge_on_grid
       # Turn off front geyser
       - service: script.geyser_off_front
-      # if before 6am in the morning then also set goodwe dod to 1% if forecast less than 30kWh
-      - condition: template
-        value_template: >-
-          {{ ((states('sensor.time') <= '06:00') and (states('sensor.solcast_forecast')|float < 25)) }}
-      - service: input_number.set_value
-        target:
-          entity_id: input_number.set_goodwe_dod
-        data:
-          value: 1
 
   ######################################################################
   # Re-usable script to start main bedroom geyser
@@ -157,7 +167,9 @@ automation:
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
-        at: '14:00:00'
+        at: '13:00:00'
+      - platform: time
+        at: '15:00:00'
       - platform: numeric_state
         entity_id: sensor.front_bathroom_geyser_power
         below: '50'
@@ -175,37 +187,28 @@ automation:
       - choose:
           # Turn on between 11am and 2pm for sun times
           - conditions:
-              # - condition: state
-              #   entity_id: timer.loadshedding_slot
-              #   state: 'idle'
               - condition: template
-                value_template: "{{ ('11:00' <= states('sensor.time') <= '14:00') }}"
+                value_template: "{{ ('11:00' <= states('sensor.time') <= '15:00') }}"
               - condition: state
                 entity_id: timer.main_geyser
                 state: 'idle'
                 for:
-                  hours: 2
+                  minutes: 90
             sequence:
               - service: script.geyser_on_mainbedroom
           # Turn on early AM and late PM only if haven't been on in previous 6 hours
           # Also, if average temp below 21degree
           - conditions:
-              # - condition: state
-              #   entity_id: timer.loadshedding_slot
-              #   state: 'idle'
               - condition: state
                 entity_id: timer.main_geyser
                 state: 'idle'
                 for:
                   hours: 6
               - condition: template
-                value_template: "{{ ('14:00' < states('sensor.time') < '18:05') }}"
+                value_template: "{{ ('15:00' < states('sensor.time') < '18:05') }}"
             sequence:
               - service: script.geyser_on_mainbedroom
           - conditions:
-              # - condition: state
-              #   entity_id: timer.loadshedding_slot
-              #   state: 'idle'
               - condition: state
                 entity_id: timer.main_geyser
                 state: 'idle'
@@ -314,7 +317,7 @@ automation:
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
-        at: '11:05:00'
+        at: '10:35:00'
     action:
       - choose:
           # Turn on between 11am and 2pm for sun times
@@ -323,7 +326,7 @@ automation:
               #   entity_id: timer.loadshedding_slot
               #   state: 'idle'
               - condition: template
-                value_template: "{{ ('11:00' <= states('sensor.time') <= '14:00') }}"
+                value_template: "{{ ('10:30' <= states('sensor.time') <= '14:00') }}"
             sequence:
               - service: script.geyser_on_front
           # Turn on early AM and late PM only if haven't been on in previous 6 hours
