--- a/automations.yaml
+++ b/automations.yaml
@@ -10,12 +10,11 @@
       start_brightness: 30
       end_brightness: 90
       pre_sunrise_actions:
-      - service: switch.turn_off
-        data: {}
-        target:
-          entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
-      - service: timer.start
-        data: {}
-        target:
-          entity_id:
-          - timer.morning_routine
+        - service: switch.turn_off
+          data: {}
+          target:
+            entity_id: switch.adaptive_lighting_sleep_mode_main_bedroom
+        - service: timer.start
+          data: {}
+          target:
+            entity_id: timer.morning_routine
