--- a/packages/lights/morning_routine.yaml
+++ b/packages/lights/morning_routine.yaml
@@ -4,3 +4,56 @@ timer:
   morning_routine:
     name: Morning Routine
     duration: '02:00:00'
+
+automation:
+  - alias: Turn off main_bathroom lights after timer finish
+    trigger:
+      platform: event
+      event_type: timer.finished
+      event_data:
+        entity_id: timer.morning_routine
+    action:
+      - service: switch.turn_on
+        target:
+          entity_id:
+            - switch.adaptive_lighting_main_bedroom
+            - switch.adaptive_lighting_small_bedroom
+
+  - id: '1654001290028'
+    alias: Wake-up light alarm main-bedroom
+    description: ''
+    use_blueprint:
+      path: sbyx/wake-up-light-alarm-with-sunrise-effect.yaml
+      input:
+        manual_time: 05:40:00
+        light_entity: light.main_bedroom
+        check_entity: binary_sensor.workday_sensor
+        start_brightness: 30
+        end_brightness: 90
+        pre_sunrise_actions:
+          - service: switch.turn_off
+            target:
+              entity_id:
+                - switch.adaptive_lighting_main_bedroom
+                - switch.adaptive_lighting_sleep_mode_main_bedroom
+          - service: timer.start
+            target:
+              entity_id: timer.morning_routine
+
+  - id: '1658380697189'
+    alias: Wake-up light alarm main-bedroom
+    description: ''
+    use_blueprint:
+      path: sbyx/wake-up-light-alarm-with-sunrise-effect.yaml
+      input:
+        manual_time: 07:00:00
+        light_entity: light.small_bedroom
+        check_entity: binary_sensor.workday_sensor
+        start_brightness: 30
+        end_brightness: 90
+        pre_sunrise_actions:
+          - service: switch.turn_off
+            target:
+              entity_id:
+                - switch.adaptive_lighting_small_bedroom
+                - switch.adaptive_lighting_sleep_mode_small_bedroom
