--- a/packages/lights/light_triggers_morning.yaml
+++ b/packages/lights/light_triggers_morning.yaml
@@ -16,7 +16,7 @@ automation:
             {%- set domains = ['light'] -%}
             {%- for domain in domains -%}
               {%- for item in states[domain]  -%}
-                {%- if item.entity_id not in ['light.main_bathroom'] and item.attributes.icon != 'mdi:lightbulb-group' %}
+                {%- if item.entity_id not in ['light.main_bathroom'] and state_attr(item.entity_id, 'icon') == none %}
                   {%- set data.lights_todo = data.lights_todo + [item.entity_id] %}
                 {%- endif -%}
               {%- endfor -%}
