--- a/includes/notify.yaml
+++ b/includes/notify.yaml
@@ -17,7 +17,7 @@
 ## use
 # message: test slack
 # target: ["#alerts"]
-- name: slack
-  platform: slack
-  api_key: !secret slack_api_key
-  default_channel: '#general'
+# - name: slack
+#   platform: slack
+#   api_key: !secret slack_api_key
+#   default_channel: '#general'
