need tweaking, for now run all the time

--- a/packages/cover_garage_doors.yaml
+++ b/packages/cover_garage_doors.yaml
@@ -172,6 +172,9 @@ automation:
     trigger:
       - platform: time
         at: '20:00:00'
+      - platform: state
+        entity_id: binary_sensor.front_garage_door_window
+        to: 'on'
     condition:
       - condition: state
         entity_id: binary_sensor.front_garage_door_window
@@ -202,6 +205,9 @@ automation:
     trigger:
       - platform: time
         at: '20:00:00'
+      - platform: state
+        entity_id: binary_sensor.back_garage_door
+        to: 'on'
     condition:
       - condition: state
         entity_id: binary_sensor.back_garage_door
